--- a/report/text/conclusion.tex
+++ b/report/text/conclusion.tex
@@ -1,5 +1,5 @@
 \chapter{Conclusion}
-
+THIS IS IN PROGRESS
 
 First we need to take a look at the problem statement again.
 \begin{verse}
@@ -14,11 +14,17 @@ How can hardware identification and webservices give parents the tools to help t
 \end{verse}
 
 \section{How do we identify unique users in a subtle and child friendly way}
-tags
+A user is identified by a tag. 
+
+
+\section{How do we facilitate concepts as rules, permissions and chores without parents interaction}
+The parent interaction has been limited to only the adding, editing and deleting of rules and permission on the website. They do not have to keep count on the time the children have been using the media, since this is automatically calculated. The rules and permission is enforced by the controller. 
+
+The chores, however, require that the parents know that the child has done a chore and the manually give points to this child's profile. 
+
+
+rules and permission, website, daemon.
 
 \section{How do we enforce restrictions on media devices}
 controller, api
 
-
-\section{How do we facilitate concepts as rules, permissions and chores without parents interaction}
-rules and permission, website, daemon.
