--- a/report/text/overALLImplementation.tex
+++ b/report/text/overALLImplementation.tex
@@ -29,7 +29,7 @@ In the API there are three functions turn on, turn off and status. Turn on check
 The daemon is a background process on the server which add points to the profiles when the time period is valid. 
 
 \subsection*{The Website}
-
+Through the website it is possible to add, edit and delete profiles, tags, and controllers. It is also possible to add and delete rule, permission and chores but edit has not been implemented. 
 
 \subsection*{The Arduino}
 The Arduino is the implemented solution for controlling interaction with media devices and it has been issued with both the software and extension in hardware to function in this capacity.
