--- a/report/text/test.tex
+++ b/report/text/test.tex
@@ -2,7 +2,7 @@
 There are different ways to evaluate the web interface e.g. an expert or user-based evaluation could be made. We would have preferred to make a user-based evaluation because this give a valuable input from a person who might use the system. However, to make such a sufficient user evaluation then we should find at least people with children which is between 5-14 years old and that would take too much time. A user-based evaluation of the entire MOM system would be optimal if the user and his/hers family could try it for a week or two before we interview them about the system. Also a log for our benefit could be made during this time to see how they use it of course with the test persons permission. Therefore to only evaluate the web interface we use an expert evaluation called Heuristic evaluation. 
 
 \section{Heuristic evaluation in Theory}
-In a Heuristic evaluation the test person(s) look for errors and potential usability errors which can be categorized in 12 item and divided into 3 groups\citep{DIEB}, which is shortly described below:
+In a Heuristic evaluation the test persons look for errors and potential usability errors which can be categorized in 12 item and divided into 3 groups\citep{DIEB}, which is shortly described below:
 \begin{description}
 \item[Learnability] make it ease for the user to learn and remembering the system:
 \begin{itemize}
@@ -50,7 +50,7 @@ We want to primarily be validated on....
 
 
 \subsection{Presenting the Results}
-\fixme{to do}
+\fixme{to do} THIS IS IN PROGRESS
 
 %testcases
 \section{Testcases}
@@ -100,3 +100,4 @@ In table \ref{tab:testcase} is one of the test cases that we made for testing th
 
 
 \section{Collected Results of the Heuristic Evaluation}
+THIS IS IN PROGRESS
