Tex Updates, new tex, code update on conenction error

--- a/report/text/usingRFID.tex
+++ b/report/text/usingRFID.tex
@@ -1,4 +1,5 @@
 \subsection{Using RFID With The Arduino}
+\label{sec:rfidsect}
 \fixme{Mangler lidt mere start som der var i Using the ethernet shield.}
 The Arduino board utilizes the SM130 by sending it commands and receiving replies through Digital Pins 7 and 8.
 These pins are initialized using the library \verb|SoftwareSerial.h|.\\
