--- a/report/text/usingEthernet.tex
+++ b/report/text/usingEthernet.tex
@@ -1,4 +1,5 @@
 \subsection{Using the Ethernet Shield.}
+\label{sec:ethernetshield}
 \fixme{Mangler kort kommentar om hvorfor Ethernat er brugt istedet for en Wifi connection}
 The Ethernet shield is the primary component in accessing the API as it allows for the Arduino to access the web as a client.
 We use the Ethernet shield along with a JSON parser in order to make HTML requests on the web site that contains the system API and decode its responce.
@@ -7,7 +8,7 @@ The Ethernet Shield comes with an MAC address printed on the side which is used 
 This along with the target server is established as global variables as seen in \autoref{EthStart} along with the Method call in \verb|Setup()| that establishes a connection with the LAN. All supplied from the Arduino Library \verb|Ethernet.h|.
 \fixme{kunne være korte statement på sær funktioner for eksemple F står for når du printer} 
 \fixme{linje 22, Hvad sker der så, er det bare en død Audrino?}
-\fixme{linje 18 mangler vist et ord.}
+
 \begin{lstlisting}[frame=single, label=EthStart, caption=The Method Calls used to establish and maintain a connection.]
 //The Mac Address declared.
 byte mac[] = { 0x90, 0xA2, 0xDA, 0x0E, 0xC5, 0x94 };
@@ -15,7 +16,7 @@ byte mac[] = { 0x90, 0xA2, 0xDA, 0x0E, 0xC5, 0x94 };
 //Our target Server that the API is called on
 char server[] = "spcadmin.tk";
 
-//When this statement is evaluated the  Arduino to the LAN.
+//When this statement is evaluated the Arduino connects to the LAN.
 //This happens during Setup();
 if (Ethernet.begin(mac) == 0) 
 {
@@ -24,7 +25,7 @@ if (Ethernet.begin(mac) == 0)
 	while(true); 
 }
 
-//The following code us run at every loop to assure
+//The following code us run in every loop through checkConnection() call to assure
 //that the DHCP lease is renewed when needed.
 Ethernet.maintain();
 \end{lstlisting}
@@ -38,7 +39,7 @@ The process is almost identical in either case and can be divided into two parts
 
 As seen in \autoref{pageConnect} the Device ID and the Tag ID is connected in a char array to form the url which complies with the action that is being performed. \fixme{connect this to the API implmentation}
 Then in return the Ethernet Shield receives the HTML Page, and in \autoref{pageDecipher} the Arduino reads this information one byte at the time where all but the JSON string is stripped and stored in a char pointer.
-\fixme{Skal genskrives} When there is no more information to be received from the website, which is seen in  the connection is closed and the JSON string is parsed for the relevant information on whether or not the user was successful \autoref{pageJSON}.\fixme{sætningens sammenhæng giver ikke mening.dette for venter jeg: When ....then .....}
+When all the bytes have been through this progress the connection is closed and the JSON string is parsed the result of the action. This can be seen in \autoref{pageJSON}.
 \begin{lstlisting}[frame=single, label=pageConnect, caption=Connecting to the Server and creating an HTML request.]
 void turnOn(void)
 {
