--- a/report/text/usingTime.tex
+++ b/report/text/usingTime.tex
@@ -1,4 +1,5 @@
 \section{Time Checking}
+\label{sec:timecheck}
 Time checking in the in the Arduino Sketch is based on the native method called \verb|millis()|.
 The \verb|millis()| method returns a long value with the number of milliseconds since the Arduino was turned on.
 This number will continue to rise until the long overflows and the count starts once again from zero.\newline
