--- a/report/draft.tex
+++ b/report/draft.tex
@@ -48,6 +48,7 @@
 	\input{text/daemon.tex}
 	\input{text/ControllerDesign.tex}
 	\input{text/PrototypeImplemtation.tex}
+	\input{text/usingCode.tex}
 	\input{text/usingEthernet.tex}
 	\input{text/usingRFID.tex}
 	\input{text/ArduinoDesign.tex}
