update rettelser og flyttet noget

--- a/report/text/PrototypeImplemtation.tex
+++ b/report/text/PrototypeImplemtation.tex
@@ -1,18 +1,18 @@
 \section{Prototype Implemtation}
 The prototype is designed to prove the concept of the requirements to direct the power to and away from the media, control a tag reader, communicate with the server and it need to be a Embedded system. \newline
-To prove the requerments the system the to be able to: 
+To prove the requirements the system the to be able to: 
 
 \begin{itemize}
 	\item Read and accept/decline tags in communication with a server though a online connection.
-	\item Have a good system structur moniter the server connection.
-	\item Regulate the power recording to the senario.
-	\item Manage the time usaged and user restigtions. 
-	\item Communicat system status to user though LED light indication. 
+	\item Have a good system structure monitor the server connection.
+	\item Regulate the power recording to the scenario.
+	\item Manage the time usage and user restrictions. 
+	\item Communicate system status to user though LED light indication. 
 \end{itemize}
 
-The Arduino hardware platform is made the base for the prototype as analysed in section \ref{HardwarePlatform}.
-To make a functional prototype was a Arduino Uno equiped ethernet port chosen. To the Arduino Uno is a RFID shield and breadboard connected.        
-Before looking deeper in system structur of the controller is the code used to communicat with the RFID shield and ethernet port dokumented to give better knowlagde how they work.      
+The Arduino hardware platform is made the base on the prototype as analyzed in section \ref{HardwarePlatform}.
+To make a functional prototype the Arduino Uno became equipped with a Ethernet port. To the Arduino Uno is a RFID shield and breadboard connected.        
+First a deeper look into the structure of the controller is shown. Then some code to shown the communication with the RFID shield and Ethernet port is documented to give better knowledge how they work.      
 
 
     
