rettelser og flyttet en tabel til appendix

--- a/report/draft.tex
+++ b/report/draft.tex
@@ -76,6 +76,7 @@
 	\begin{appendices}
 	\input{text/oldRuleDesign.tex}
 	\input{text/LightTabel.tex}
+	\input{text/appenbytecode.tex}
 	\input{text/testCases.tex}
 	\end{appendices}
 	
