Some future work about daemon, could not come up with anything for API

--- a/report/text/futureWork.tex
+++ b/report/text/futureWork.tex
@@ -25,3 +25,6 @@ Implement the calendar functionality fully. Where all the time bound rules are p
 
 \textbf{Mobile application}\\
 Another improvement of MOM could be to make a mobile application.\\
+
+\textbf{The Daemon}
+The daemon should detect when a controller has not contacted the service in a while and do some disciplinary actions against the user. There could also be more real time rules added which would need to be implemented in the daemon. Also other real time things such as daily/weekly reports sent via email or SMS could be implemented to give parents automatic statistics about their childs media usage. 
